--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Wind Chime</title>
+    <meta property="og:image" content="https://ibb.co/7ys4Zck" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
